--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -60,5 +60,6 @@
     {% endif %}
 
     {% include statistics_body.html %}
+	tools : <a href="/tools/Reverse-shell-cheatsheet.html">Reverse shell</a> <a href="/tools/File-Download-Generator">File Download</a>
   </body>
 </html>
