--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -54,12 +54,12 @@
         </p>
       </div>
     </div>
-
+	tools : <a href="/tools/Reverse-shell-cheatsheet.html">Reverse shell</a> <a href="/tools/File-Download-Generator.html">File Download</a>
     {% if site.lock_menu and site.lock_menu == true %}
     <script src="{{ "/assets/js/lock_menu.js" }}"></script>
     {% endif %}
 
     {% include statistics_body.html %}
-	tools : <a href="/tools/Reverse-shell-cheatsheet.html">Reverse shell</a> <a href="/tools/File-Download-Generator">File Download</a>
+
   </body>
 </html>
