--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -35,8 +35,9 @@
       <h1>{{ site.name }}</h1>
       <p>{{ site.description }}</p>
       <div class="index-contact">
-	  	tools : <a href="/tools/Reverse-shell-cheatsheet.html">Reverse shell</a> <a href="/tools/File-Download-Generator.html">File Download</a>
-        <p>
+	          <p>
+	  	tools : <a href="/tools/Reverse-shell-cheatsheet.html" target="_blank">Reverse shell</a> <a href="/tools/File-Download-Generator.html" target="_blank">File Download</a>
+        </p><p>
           {% if site.twitter %}
           <span><a href="{{ site.twitter }}" target="_blank"><i class="fa fa-twitter"></i></a></span>
           {% endif %}
