--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -36,7 +36,7 @@
       <p>{{ site.description }}</p>
       <div class="index-contact">
 	          <p>
-	  	tools : <a href="/tools/Reverse-shell-cheatsheet.html" target="_blank">Reverse shell</a> <a href="/tools/File-Download-Generator.html" target="_blank">File Download</a>
+	  	tools : <a href="/tools/Reverse-shell-cheatsheet.html" target="_blank">Reverse shell</a> <a href="/tools/File-Download-Generator.html" target="_blank">File Download</a>  <a href="/tools/av.html" target="_blank">FindAV</a>
         </p><p>
           {% if site.twitter %}
           <span><a href="{{ site.twitter }}" target="_blank"><i class="fa fa-twitter"></i></a></span>
